# CG

./: AmbientSource.cpp  AmbientSource.h  CENAFINAL.txt  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Cilinder.cpp  Cilinder.h  CircularPlane.cpp  CircularPlane.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  HitBox.cpp  HitBox.h  LightSource.h  Object.h  Plane.cpp  Plane.h  PontualSource.cpp  PontualSource.h  README.md  ROGER.txt  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Tensor.cpp  Tensor.h  TriangularFace.cpp  TriangularFace.h  main  main.cpp
